--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             }
         }
     </script>
-    <link rel="stylesheet" href="styles.css" />
+   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="font-body bg-black text-white min-h-screen">
     <button id="themeToggle" class="theme-toggle-btn">
@@ -40,9 +40,11 @@
         <div class="border-2 border-white p-8 raised-shadow w-full">
             <div class="text-center mb-6">
                 <h1 class="text-4xl md:text-5xl font-bold font-heading mb-4 flex items-center justify-center gap-4">
+                    <span class="broken-link text-4xl">🎬</span>
                     THUMBNAIL
+                    <span class="broken-link text-4xl">📸</span>
                 </h1>
-                <p class="text-lg">Get YouTube thumbnails easily</p>
+                <p class="text-lg">Download YouTube thumbnails easily</p>
             </div>
 
             <div class="mb-6">
@@ -72,5 +74,6 @@
     </main>
 
     <div id="notification" class="fixed top-5 right-5 border-2 border-white bg-black text-white px-6 py-3 raised-shadow hidden">✅ URL copied successfully!</div>
-    <script src="script.js"></script>
+<script src="script.js"></script>
+</body>
 </html>
