--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Thumbnail Downloader</title>
+    <title>Get YouTube Thumbnail</title>
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/upload-file-lab/fileupload7/main/uploads/1766991657912.jpeg?format=png&name=900x900">
     <script src="https://cdn.tailwindcss.com"></script>
     
@@ -40,11 +40,9 @@
         <div class="border-2 border-white p-8 raised-shadow w-full">
             <div class="text-center mb-6">
                 <h1 class="text-4xl md:text-5xl font-bold font-heading mb-4 flex items-center justify-center gap-4">
-                    <span class="broken-link text-4xl">🎬</span>
-                    THUMBNAIL
-                    <span class="broken-link text-4xl">📸</span>
+                  GET YOUTUBE THUMBNAIL
                 </h1>
-                <p class="text-lg">Download YouTube thumbnails easily</p>
+                <p class="text-lg">Get YouTube thumbnails easily</p>
             </div>
 
             <div class="mb-6">
